--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,11 +143,9 @@
 {% include "partials/nav_bar.html" %}
 
 <section class="flex flex-col gap-2">
-    <div x-data="{ tab: 1 }" class="h-[300px] bg-card text-card-foreground border border-border rounded shadow p-2">
+    <div x-data="{ tab: 1 }" class="bg-card text-card-foreground border border-border rounded shadow p-2">
         <div class="flex justify-between">
             <h1 class="font-bold">Weekly report</h1>
-
-
             <div class="flex space-x-2 border-b border-border mb-2">
                 <button class="ghost text-xs" :class="tab === 1 ? 'border-border' : 'text-muted-foreground'"
                     @click="tab = 1">
@@ -160,15 +158,16 @@
             </div>
         </div>
 
-        <div class="relative h-60">
+        <div class="relative h-56">
             <canvas x-show="tab === 1" id="weeklyChartCount" class="absolute inset-0"></canvas>
             <canvas x-show="tab === 2" id="weeklyChartPercentage" class="absolute inset-0"></canvas>
         </div>
+        <p class="italic text-sm">AI: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure earum dolore minima quis accusamus enim cumque laboriosam porro repudiandae! Quidem unde harum qui molestias dolorem voluptatum dolorum quia deleniti fugit!</p>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 h-[250px] ">
 
         <div class="bg-card text-card-foreground border border-border rounded shadow p-2">
-            <h1 class="font-bold">Weekly report</h1>
+            <h1 class="font-bold">Daily report {{ date }}</h1>
             <canvas id="dailyChart" class="max-h-[250px]"></canvas>
         </div>
     </div>
