fix config load

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -99,9 +99,9 @@
         datasets: [
             {
                 data: [
-                    dataDaily.completed || 0,
-                    dataDaily.pending || 0,
-                    dataDaily.deleted || 0,
+                    dataDaily.completed,
+                    dataDaily.pending,
+                    dataDaily.deleted,
                 ],
                 backgroundColor: [
                     getCSSVar('--chart-2'),
